--- a/Dimuon_test.ipynb
+++ b/Dimuon_test.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_13651/3733293531.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -19,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,12 +65,23 @@
     "background_df['target'] = 1\n",
     "\n",
     "filtered_df = pd.concat([signal_df, background_df], ignore_index=True)\n",
+    "features = filtered_df[['pt1', 'pt2', 'eta1', 'eta2', 'phi1', 'phi2', 'Q1', 'Q2']] #Since M is given as a parameter for both the muons, it is not taken as a parameter\n",
+    "target = filtered_df['target']\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, test_data, train_target, test_target = train_test_split(features, target, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,27 +184,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished epoch 0, latest loss 4.1806888475548476e-05\n",
-      "Finished epoch 1, latest loss 0.0005317169707268476\n",
-      "Finished epoch 2, latest loss 8.621768211014569e-05\n",
-      "Finished epoch 3, latest loss 0.003441666718572378\n",
-      "Finished epoch 4, latest loss 3.7849276850465685e-06\n",
-      "Finished epoch 5, latest loss 0.0004483017837628722\n",
-      "Finished epoch 6, latest loss 0.002661291277036071\n",
-      "Finished epoch 7, latest loss 5.1632290706038475e-05\n",
-      "Finished epoch 8, latest loss 6.906952330609784e-05\n",
-      "Finished epoch 9, latest loss 0.00010955195466522127\n",
-      "Finished epoch 10, latest loss 0.00041529370355419815\n",
-      "Finished epoch 11, latest loss 0.00023112961207516491\n",
-      "Finished epoch 12, latest loss 4.291659024602268e-06\n",
-      "Finished epoch 13, latest loss 9.445937030250207e-05\n",
-      "Finished epoch 14, latest loss 1.937151523634384e-07\n",
-      "Finished epoch 15, latest loss 3.166497890561004e-07\n",
-      "Finished epoch 16, latest loss 3.241004264964431e-07\n",
-      "Finished epoch 17, latest loss 0.0\n",
-      "Finished epoch 18, latest loss 0.0\n",
-      "Finished epoch 19, latest loss 2.0444782421691343e-05\n",
-      "Accuracy 0.995930016040802\n"
+      "Finished epoch 0, latest loss 0.0002693688729777932\n",
+      "Finished epoch 1, latest loss 0.0006065780180506408\n",
+      "Finished epoch 2, latest loss 2.141408003808465e-05\n",
+      "Finished epoch 3, latest loss 1.4741329323442187e-05\n",
+      "Finished epoch 4, latest loss 1.323141623288393e-05\n",
+      "Finished epoch 5, latest loss 0.0014532123459503055\n",
+      "Finished epoch 6, latest loss 3.9804373955121264e-05\n",
+      "Finished epoch 7, latest loss 0.0015726550482213497\n",
+      "Finished epoch 8, latest loss 0.0008910330361686647\n",
+      "Finished epoch 9, latest loss 6.592884165002033e-05\n",
+      "Finished epoch 10, latest loss 0.00011740001355065033\n",
+      "Finished epoch 11, latest loss 0.00024978184956125915\n",
+      "Finished epoch 12, latest loss 9.714773477753624e-05\n",
+      "Finished epoch 13, latest loss 5.18995730089955e-05\n",
+      "Finished epoch 14, latest loss 3.1773852242622524e-05\n",
+      "Finished epoch 15, latest loss 5.7518877838447224e-06\n",
+      "Finished epoch 16, latest loss 1.0058285937475375e-07\n",
+      "Finished epoch 17, latest loss 3.645959077402949e-05\n",
+      "Finished epoch 18, latest loss 2.059011603705585e-05\n",
+      "Finished epoch 19, latest loss 8.318665095430333e-06\n",
+      "Accuracy 0.9998300075531006\n"
      ]
     }
    ],
@@ -200,7 +226,7 @@
     "loss_fn   = nn.BCELoss()  # binary cross entropy\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001) #lr değiştirrilebilir mi \n",
     " \n",
-    "n_epochs = 20 #e:15 b:32 accuracy: 0.377, e:15 b:64 a:0.377, e:15 b:128 a:0.377, e:30, b:128 a:0.97; e:20 b:128 a:0.99(best result)\n",
+    "n_epochs = 20 #e:15 b:32 accuracy: 0.377, e:15 b:64 a:0.377, e:15 b:128 a:0.377, e:30, b:128 a:0.97; e:20 b:128 a:0.99(best result) (20-80 included)\n",
     "batch_size = 128\n",
     " \n",
     "for epoch in range(n_epochs):\n",
