--- a/accuracy_check.ipynb
+++ b/accuracy_check.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_55172/3733293531.py:1: DeprecationWarning: \n",
+      "/tmp/ipykernel_23902/389280365.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -21,6 +21,7 @@
     }
    ],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -213,7 +214,7 @@
     }
    ],
    "source": [
-    "df[['Q1', 'Q2', 'target']]"
+    "df[['Q1', 'Q2', 'target']] #checking the columns\n"
    ]
   },
   {
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,6 @@
     }
    ],
    "source": [
-    "#loop at iki return için ve binleri kullan bu sana mean pt ve acc plotu versin:\n",
     "# Create bins\n",
     "bins = np.linspace(1, 100, 100)  #binlerle oynamak lazım\n",
     "\n",
@@ -388,7 +388,7 @@
     }
    ],
    "source": [
-    "# iki plot versin\n",
+    "# two plots \n",
     "bins = np.linspace(0, 100, 101)  \n",
     "#0-60\n",
     "mean_pts_0_60 = []\n",
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -501,15 +501,15 @@
       "Bin 57: Mean pt = 56.50, Accuracy = 0.00%\n",
       "Bin 58: Mean pt = 57.50, Accuracy = 0.00%\n",
       "Bin 59: Mean pt = 58.50, Accuracy = 0.00%\n",
-      "Bin 60: Mean pt = 59.50, Accuracy = nan%\n",
+      "Bin 60: Mean pt or Accuracy is NaN, skipping...\n",
       "Bin 61: Mean pt = 60.50, Accuracy = 0.00%\n",
-      "Bin 62: Mean pt = 61.50, Accuracy = nan%\n",
-      "Bin 63: Mean pt = 62.50, Accuracy = nan%\n",
+      "Bin 62: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 63: Mean pt or Accuracy is NaN, skipping...\n",
       "Bin 64: Mean pt = 63.50, Accuracy = 0.00%\n",
-      "Bin 65: Mean pt = 64.50, Accuracy = nan%\n",
+      "Bin 65: Mean pt or Accuracy is NaN, skipping...\n",
       "Bin 66: Mean pt = 65.50, Accuracy = 0.00%\n",
       "Bin 67: Mean pt = 66.50, Accuracy = 0.00%\n",
-      "Bin 68: Mean pt = 67.50, Accuracy = nan%\n",
+      "Bin 68: Mean pt or Accuracy is NaN, skipping...\n",
       "Bin 69: Mean pt = 68.50, Accuracy = 0.00%\n",
       "Bin 70: Mean pt = 69.50, Accuracy = 0.00%\n",
       "Bin 71: Mean pt = 70.50, Accuracy = 50.00%\n",
@@ -519,76 +519,50 @@
       "Bin 75: Mean pt = 74.50, Accuracy = 0.00%\n",
       "Bin 76: Mean pt = 75.50, Accuracy = 0.00%\n",
       "Bin 77: Mean pt = 76.50, Accuracy = 0.00%\n",
-      "Bin 78: Mean pt = 77.50, Accuracy = nan%\n",
+      "Bin 78: Mean pt or Accuracy is NaN, skipping...\n",
       "Bin 79: Mean pt = 78.50, Accuracy = 50.00%\n",
-      "Bin 80: Mean pt = 79.50, Accuracy = nan%\n",
-      "Bin 81: Mean pt = 80.50, Accuracy = nan%\n",
-      "Bin 82: Mean pt = 81.50, Accuracy = nan%\n",
-      "Bin 83: Mean pt = 82.50, Accuracy = nan%\n",
-      "Bin 84: Mean pt = 83.50, Accuracy = nan%\n",
-      "Bin 85: Mean pt = 84.50, Accuracy = nan%\n",
+      "Bin 80: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 81: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 82: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 83: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 84: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 85: Mean pt or Accuracy is NaN, skipping...\n",
       "Bin 86: Mean pt = 85.50, Accuracy = 0.00%\n",
-      "Bin 87: Mean pt = 86.50, Accuracy = nan%\n",
-      "Bin 88: Mean pt = 87.50, Accuracy = nan%\n",
-      "Bin 89: Mean pt = 88.50, Accuracy = nan%\n",
-      "Bin 90: Mean pt = 89.50, Accuracy = nan%\n",
+      "Bin 87: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 88: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 89: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 90: Mean pt or Accuracy is NaN, skipping...\n",
       "Bin 91: Mean pt = 90.50, Accuracy = 100.00%\n",
-      "Bin 92: Mean pt = 91.50, Accuracy = nan%\n",
-      "Bin 93: Mean pt = 92.50, Accuracy = nan%\n",
-      "Bin 94: Mean pt = 93.50, Accuracy = nan%\n",
-      "Bin 95: Mean pt = 94.50, Accuracy = nan%\n",
-      "Bin 96: Mean pt = 95.50, Accuracy = nan%\n",
-      "Bin 97: Mean pt = 96.50, Accuracy = nan%\n",
-      "Bin 98: Mean pt = 97.50, Accuracy = nan%\n",
-      "Bin 99: Mean pt = 98.50, Accuracy = nan%\n",
-      "Bin 100: Mean pt = 99.50, Accuracy = nan%\n"
+      "Bin 92: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 93: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 94: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 95: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 96: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 97: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 98: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 99: Mean pt or Accuracy is NaN, skipping...\n",
+      "Bin 100: Mean pt or Accuracy is NaN, skipping...\n"
      ]
     }
    ],
    "source": [
-    "# Loop over bins with debug maybe, ilginç oldu çünkü 10. ve 20.lerden sonra dev düşüş. İlk aldığım nan hatasıyla ilgili olabilir buradakiler de \n",
+    "mean_pts = []\n",
+    "accuracies = []\n",
+    "\n",
     "for i in range(len(bins)-1):\n",
     "    pt_low, pt_high = bins[i], bins[i+1]\n",
     "    mean_pt, acc = calc_acc(model, df, pt_low, pt_high)\n",
-    "    mean_pts.append(mean_pt)\n",
-    "    accuracies.append(acc)\n",
-    "     \n",
-    "    print(f\"Bin {i+1}: Mean pt = {mean_pt:.2f}, Accuracy = {acc:.2%}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'#anlamak için yaptım \\nmean_pts_0_60 = np.array([10, 20, 30, 40, 50, 60, 70])\\nbins = np.linspace(0, 60, 7)\\n\\nindices = np.where((mean_pts_0_60 >= bins[0]) & (mean_pts_0_60 <= bins[-1]))\\n\\nprint(\"Mean pts within range 0-60:\", mean_pts_0_60[indices])\\n'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''#anlamak için yaptım \n",
-    "mean_pts_0_60 = np.array([10, 20, 30, 40, 50, 60, 70])\n",
-    "bins = np.linspace(0, 60, 7)\n",
+    "    \n",
+    "    # Check if either mean_pt or acc is NaN, and skip appending NaN values\n",
+    "    if not (np.isnan(mean_pt) or np.isnan(acc)):\n",
+    "        mean_pts.append(mean_pt)\n",
+    "        accuracies.append(acc)\n",
+    "        print(f\"Bin {i+1}: Mean pt = {mean_pt:.2f}, Accuracy = {acc:.2%}\")\n",
+    "    else:\n",
+    "        print(f\"Bin {i+1}: Mean pt or Accuracy is NaN, skipping...\")\n",
     "\n",
-    "indices = np.where((mean_pts_0_60 >= bins[0]) & (mean_pts_0_60 <= bins[-1]))\n",
-    "\n",
-    "print(\"Mean pts within range 0-60:\", mean_pts_0_60[indices])\n",
-    "'''"
+    "# Now mean_pts and accuracies contain only valid values without NaNs\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
