--- a/accuracy_check.ipynb
+++ b/accuracy_check.ipynb
@@ -561,7 +561,7 @@
     "    else:\n",
     "        print(f\"Bin {i+1}: Mean pt or Accuracy is NaN, skipping...\")\n",
     "\n",
-    "# Now mean_pts and accuracies contain only valid values without NaNs\n"
+    "# Removed nan values in accuracy count \n"
    ]
   }
  ],
